Fixed inaccessible text contrast

--- a/css/ydsa.css
+++ b/css/ydsa.css
@@ -11,7 +11,7 @@ body {
   font-weight: normal;
   font-style: normal;
   padding-top: 54px;
-  color: #868e96;
+  color: #6B7177;
 }
 
 @media (min-width: 992px) {
